recycling-bin/2026-04-21-repo-cleanup/tmp/stream-bootstrap/objects/sunrun2_projects__dll/fields/sunrun_equipment_cost_estimate__c.field-meta.xml
<CustomField>
    <fullName>sunrun_equipment_cost_estimate__c</fullName>
    <label>sunrun_equipment_cost_estimate</label>
    <precision>18</precision>
    <scale>6</scale>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>sunrun_equipment_cost_estimate</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Number</type>
</CustomField>